--- a/project_w1/vmac/Makefile
+++ b/project_w1/vmac/Makefile
@@ -82,7 +82,7 @@ EXTRA_CFLAGS += -DCONFIG_CONCURRENT_MODE
 #EXTRA_CFLAGS += -DDRV_SUPPORT_TX_WITHDRAW
 EXTRA_CFLAGS += -DHAL_FPGA_VER
 EXTRA_CFLAGS += -DPROJECT_W1
-#EXTRA_CFLAGS += -DINTER_BEACON
+EXTRA_CFLAGS += -DINTER_BEACON
 EXTRA_CFLAGS += -DSRAM_CONCURRENT
 EXTRA_CFLAGS += -DCTS_VERIFIER_GAS
 #EXTRA_CFLAGS += -DRX_PN_CHECK
