wifi: fix w1 android u kernel5.15 make fail issue [1/1]
PD#SWPL-123954

Problem:
w1 make in android u fail

Solution:
fix make fail issue

Verify:
ohm

Change-Id: I4e013524b04587d497afaf6c5cdda9f7836f29f7
Signed-off-by: jiabin.chen <jiabin.chen@amlogic.com>

--- a/project_w1/vmac/Makefile
+++ b/project_w1/vmac/Makefile
@@ -69,7 +69,7 @@ CONFIG_MAC_SUPPORT=y
 CONFIG_WIFI_CAPTURE=y
 TARGET = vlsicomm
 
-EXTRA_CFLAGS += -Wno-enum-conversion
+EXTRA_CFLAGS += -Wno-enum-conversion -Wno-strict-prototypes
 EXTRA_CFLAGS += ${INCS}  -DCONFIG_WAPI
 EXTRA_CFLAGS += -Wall -Wno-unused-function #show all warning
 EXTRA_CFLAGS += -Werror -Wno-format -Wno-error #convert warning into error
@@ -110,6 +110,9 @@ ifeq ($(CLANG_VERSION), r437112)
 EXTRA_CFLAGS += -Wno-unused-but-set-variable
 endif
 ifeq ($(CLANG_VERSION), r450784d)
+EXTRA_CFLAGS += -Wno-unused-but-set-variable
+endif
+ifeq ($(CLANG_VERSION), r487747)
 EXTRA_CFLAGS += -Wno-unused-but-set-variable
 endif
 
