wifi: android U compile fail some times [1/1]
PD#SWPL-125301

Problem:
android U compile fail some times

Solution:
rm print_version.c

Verify:
ohm

Change-Id: Idb24bb4395b921956bb6996aeafc72465b4f0cf2
Signed-off-by: jiabin.chen <jiabin.chen@amlogic.com>

--- a/project_w1/vmac/Makefile
+++ b/project_w1/vmac/Makefile
@@ -181,6 +181,7 @@ $(TARGET)-objs = $(TARGET_LIST)
 else
 
 modules:
+	-rm ./print_version.c
 	perl ./create_version_file.pl
 	@echo "UNO_GXL_SUB_P200=$(UNO_GXL_SUB_P200)"
 	@echo "PROJECT = $(PROJ_NAME)"
