wifi: update to ver 1.6.0_20231222 driver:520823b29b [1/1]
PD#SWPL-150950

Problem:
1.W150S1 chip bt is working fine, should be disabled in wifionly chip
2.coexist of bt carton in wifi iperf rx
3.rate adaptation does not work
4.tx packet leakage after setup tx BA session
5.dut sometimes show ap list is empty
6.dut sometimes reconnect fail
7.trigger sae auth will cause sleep in atomic operation
8.kernel 5.15 some err
9.ack frame duration calculate problem
10.Illegal null pointer during scan
11.iw scan some parameters not displayed
12.dhcp & arp & eapol packet should treat as qos frame
13.hibernate when allocating memory

Solution:
1.Set BT PMU register to switch off bt function for wifionly chip
2.reduce wifi ba and ack packet tx power in wifi iperf rx when not in
low rssi case
3.dut uses correct premble to send ack frame
4.add protection when recv ba response and extend ba timeout timer
5.add scan protect timer to ensure scan completed
6.clear nssid info after sta leave
7.using work thread to trigger sae auth
8.fixed kernel 5.15 some err
9.use non-ht rate to calculate ack frame duration
10.Illegal null pointer during scan
11.fixed iw scan some parameters not displayed
12.change dhcp & arp & eapol packet to qos frame for transfer.
13.Disable hibernation when allocating memory

Verify:
ok

Change-Id: I04ab2c11c36ffb8ee5e71bbf38088524fa6a4005
Signed-off-by: chengshuo.wang <chengshuo.wang@amlogic.com>

--- a/project_w1/vmac/Makefile
+++ b/project_w1/vmac/Makefile
@@ -94,7 +94,7 @@ EXTRA_CFLAGS += -DSDIO_BUILD_IN
 EXTRA_CFLAGS += -DFW_RF_CALIBRATION
 #EXTRA_CFLAGS += -DPOWER_SAVE_NO_SDIO
 EXTRA_CFLAGS += -DAML_WPA3
-EXTRA_CFLAGS += -DWPA3_PATCH
+#EXTRA_CFLAGS += -DWPA3_PATCH
 EXTRA_CFLAGS += -DDYNAMIC_BW
 #EXTRA_CFLAGS += -DWFA_P2P_TEST
 
